# SleakCraft

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt
Client/src/: main.cpp
Game/assets/shaders/: flat_shader.frag  flat_shader.frag.spv  flat_shader.hlsl  flat_shader.vert  flat_shader.vert.spv  flat_shader_dx12.hlsl  flat_shader_gl.frag  flat_shader_gl.vert  gbuffer_gl.frag  gbuffer_gl.vert  lighting_pass_gl.frag  lighting_pass_gl.vert  water_shader.frag  water_shader.frag.spv  water_shader.hlsl  water_shader.vert  water_shader.vert.spv  water_shader_dx12.hlsl  water_shader_gl.frag  water_shader_gl.vert
Game/assets/textures/: generate_atlas.py
Game/include/: Game.hpp  MainMenuScene.hpp  MainScene.hpp
Game/include/World/: Block.hpp  BlockEffects.hpp  Chunk.hpp  ChunkManager.hpp  Noise.hpp  RegionFile.hpp  SaveManager.hpp  TextureAtlas.hpp  WorldGenerator.hpp  WorldMeta.hpp
Game/src/: Game.cpp  MainMenuScene.cpp  MainScene.cpp
Game/src/World/: BlockEffects.cpp  Chunk.cpp  ChunkManager.cpp  Noise.cpp  RegionFile.cpp  SaveManager.cpp  TextureAtlas.cpp  WorldGenerator.cpp
tools/: benchmark_visualizer.py
